{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 86,
  "lineage": "580dfb12-ad47-3b1d-5891-b2d15f67baaf",
  "resources": [
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-06d402eb35dcff031",
            "id": "igw-06d402eb35dcff031",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-igw"
            },
            "tags_all": {
              "Name": "todolist-igw"
            },
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-0b1a28d75dbba6133",
            "id": "rtb-0b1a28d75dbba6133",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "todolist-private-route-table"
            },
            "tags_all": {
              "Name": "todolist-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-05970598d509ed8e4",
            "id": "rtb-05970598d509ed8e4",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d402eb35dcff031",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todolist-public-route-table"
            },
            "tags_all": {
              "Name": "todolist-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bootstrap.aws_internet_gateway.main",
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075fd852c9f8b1f0a",
            "route_table_id": "rtb-0b1a28d75dbba6133",
            "subnet_id": "subnet-0be9252961ff8f1e9"
          },
          "dependencies": [
            "module.bootstrap.aws_route_table.private_rt",
            "module.bootstrap.aws_subnet.private",
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4a88180bb053eb1",
            "route_table_id": "rtb-0b1a28d75dbba6133",
            "subnet_id": "subnet-0615334d9e099b736"
          },
          "dependencies": [
            "module.bootstrap.aws_route_table.private_rt",
            "module.bootstrap.aws_subnet.private2",
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b927edaee0c0170a",
            "route_table_id": "rtb-05970598d509ed8e4",
            "subnet_id": "subnet-0880c8613d8ef0a7b"
          },
          "dependencies": [
            "module.bootstrap.aws_internet_gateway.main",
            "module.bootstrap.aws_route_table.public_rt",
            "module.bootstrap.aws_subnet.public",
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07072c1166a8629da",
            "route_table_id": "rtb-05970598d509ed8e4",
            "subnet_id": "subnet-0941b96d2ef03816d"
          },
          "dependencies": [
            "module.bootstrap.aws_internet_gateway.main",
            "module.bootstrap.aws_route_table.public_rt",
            "module.bootstrap.aws_subnet.public2",
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0be9252961ff8f1e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be9252961ff8f1e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1a-subnet"
            },
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0615334d9e099b736",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0615334d9e099b736",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-private-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-private-an1c-subnet"
            },
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0880c8613d8ef0a7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0880c8613d8ef0a7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1a-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1a-subnet"
            },
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-0941b96d2ef03816d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0941b96d2ef03816d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todolist-public-an1c-subnet"
            },
            "tags_all": {
              "Name": "todolist-public-an1c-subnet"
            },
            "vpc_id": "vpc-09d5bae0dfdfd0373"
          },
          "dependencies": [
            "module.bootstrap.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bootstrap",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-09d5bae0dfdfd0373",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4b1ff1b1211c871",
            "default_route_table_id": "rtb-06e863159b902db7c",
            "default_security_group_id": "sg-0e6a27ba60bc6f3c5",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d5bae0dfdfd0373",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e863159b902db7c",
            "owner_id": "241875560804",
            "tags": {
              "Name": "todolist-vpc"
            },
            "tags_all": {
              "Name": "todolist-vpc"
            }
          }
        }
      ]
    }
  ]
}